force-app/main/default/objects/animalos__Assigned_Resource__c/animalos__Assigned_Resource__c.object-meta.xml
<CustomObject>
    <label>Assigned Resource</label>
    <nameField>
        <displayFormat>AR{000000}</displayFormat>
        <label>Assigned Resource ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assigned Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>