force-app/main/default/objects/animalos__Assigned_Resource__c/fields/animalos__Job_Activity__c.field-meta.xml
<CustomField>
    <fullName>animalos__Job_Activity__c</fullName>
    <label>Job Activity</label>
    <referenceTo>animalos__Job_Activity__c</referenceTo>
    <relationshipLabel>Assigned Resources</relationshipLabel>
    <relationshipName>Assigned_Resources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>