force-app/main/default/objects/animalos__Assigned_Resource__c/fields/animalos__Resource__c.field-meta.xml
<CustomField>
    <fullName>animalos__Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>animalos__Resource__c</referenceTo>
    <relationshipLabel>Assigned Resources</relationshipLabel>
    <relationshipName>Assigned_Resources</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>