force-app/main/default/objects/animalos__Assigned_Resource__c/fields/aos_Trap_Status__c.field-meta.xml
<CustomField>
    <fullName>aos_Trap_Status__c</fullName>
    <label>Trap Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Set</fullName>
            </value>
            <value>
                <fullName>Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>